dotnet/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  #  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: sheshuvalandas/backend-compose #-service-name #3-mysql
          name: backend
          ports:
            - containerPort: 80
